# slack-to-email-service-provider

./: .env.example  .gitignore  DEMO.md  LICENSE  README.md  build-spec-multi-tenant-suppression-bot.md  pyproject.toml  tenants.example.toml
.claude/: CLAUDE.md  PROGRESS.md  settings.json
.githooks/: pre-commit
docs/: sample-audit-report.md
scripts/: demo_report.py  healthcheck.py
src/: __init__.py  audit.py  config.py  core.py  email_parser.py  mailgun_client.py  main.py  schemas.py  sendgrid_client.py  slack_handlers.py  tenant_dispatch.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_audit.py  test_config.py  test_core.py  test_email_parser.py  test_integration.py  test_mailgun_client.py  test_sendgrid_client.py  test_slack_handlers.py  test_tenant_dispatch.py
